package edu.fiuba.algo3.controlador;

import edu.fiuba.algo3.modelo.Pista;

public class ManipuladorDeEventos {
    public void mostrarPista(Pista pista) {

    }
}